<resources>
    <string name="app_name">Image Search</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="advance_filters">"   Advanced Filters   "</string>
    <string name="filter_size">"Size  "</string>
    <string name="filter_type">"Type  "</string>
    <string name="filter_color">"Color"</string>
    <string name="filter_site"> "Site "</string>
    <string name="btn_apply"> " Apply "</string>
    <string name="btn_cancel">"Cancel"</string>

    <string-array name="image_size_filters">
        <item>ALL</item>
        <item>icon</item>
　　　　　<item>small</item>
　　　　　<item>medium</item>
　　　　　<item>large</item>
        <item>xlarge</item>
        <item>xxlarge</item>
        <item>huge</item>
     </string-array>

    <string-array name="image_type_filters">
        <item>ALL</item>
        <item>jpg</item>
        <item>png</item>
        <item>gif</item>
        <item>bmp</item>
    </string-array>

    <string-array name="image_color_filters">
        <item>ALL</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>
    <string name="title_activity_image_detail">ImageDetailActivity</string>
</resources>
