<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/gray"
              android:alpha="50"
              android:paddingTop="10dp"
              android:paddingBottom="10dp"
              android:paddingLeft="10dp"
              android:paddingRight="10dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/advance_filters"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/gray"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <RelativeLayout
        android:id="@+id/rlSize"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/filter_size"
            android:id="@+id/tvSize"
            android:layout_gravity="center_horizontal"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/tvSize"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/spSize"
            android:entries="@array/image_size_filters"
            android:spinnerMode="dropdown"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlType"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/filter_type"
            android:id="@+id/tvType"
            android:layout_gravity="center_horizontal"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/tvType"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/spType"
            android:entries="@array/image_type_filters"
            android:spinnerMode="dropdown"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlColor"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/filter_color"
            android:id="@+id/tvColor"
            android:layout_gravity="center_horizontal"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/tvColor"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/spColor"
            android:entries="@array/image_color_filters"
            android:spinnerMode="dropdown"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlSite"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/filter_site"
            android:id="@+id/tvSite"
            android:layout_gravity="center_horizontal"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/tvSite"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/etSite"/>
    </RelativeLayout>

    <!--<View-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="1dp"-->
        <!--android:background="@color/gray"-->
        <!--android:paddingTop="5dp"-->
        <!--android:paddingBottom="5dp"/>-->

    <RelativeLayout
        android:id="@+id/rlButton"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/btn_apply"/>
        <View
            android:id="@+id/vSplitter"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_centerHorizontal="true" />
        <Button
            android:id="@+id/btCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/vSplitter"
            android:text="@string/btn_cancel"/>

    </RelativeLayout>


</LinearLayout>